:art: Fix #69 time contextual icon clipping

--- a/src/assets/scss/templates/_templates.scss
+++ b/src/assets/scss/templates/_templates.scss
@@ -208,6 +208,8 @@ footer {
 
 	&:before {
 		background-image: url(../images/icons/time.svg);
+		margin-bottom: -.25em;
+		padding: 7px;
 	}
 }
 
